welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: ';' expected but ')' found.
	 { !((b<13))||!(b>19))}
                             ^